
======================================================================

  For the latest news about less, see https://greenwoodsoftware.com/less
  You can also download the latest version of less from there.

  Report bugs, suggestions or comments at 
  https://github.com/gwsw/less/issues.

======================================================================

	Major changes between "less" versions 643 and 652

* Add ^O^N, ^O^P, ^O^L and ^O^O commands and mouse clicks (with --mouse)
  to find and open OSC8 hyperlinks (github #251).

* Add --match-shift option.

* Add --lesskey-content option (github #447).

* Add LESSKEY_CONTENT environment variable (github #447).

* Add --no-search-header-lines and --no-search-header-columns options
  (github #397).

* Add ctrl-L search modifier (github #367).

* A ctrl-P at the start of a shell command suppresses the "done" 
  message (github #462).

* Add attribute characters ('*', '~', '_', '&') to --color
  parameter (github #471).

* Allow expansion of environment variables in lesskey files.

* Add LESSSECURE_ALLOW environment variable (github #449).

* Add LESS_UNSUPPORT environment variable.

* Add line number parameter to --header option (github #436).

* Mouse right-click jumps to position marked by left-click (github #390).

* Ensure that the target line is not obscured by a header line 
  set by --header (github #444).

* Change default character set on Windows from dos to utf-8.

* Add message when search with ^W wraps (github #459).

* UCRT builds on Windows 10 and later now support Unicode file names
  (github #438).

* Improve behavior of interrupt while reading non-terminated pipe
  (github #414).

* Improve parsing of -j, -x and -# options (github #393).

* Support files larger than 4GB on Windows (github #417).

* Support entry of Unicode chars larger than U+FFFF on Windows (github #391).

* Improve colors of bold, underline and standout text on Windows.
