@@ -787,9 +787,8 @@ the second specifies the background color.
 Each integer is a value between 0 and 255 inclusive which selects
 a "CSI 38;5" color value (see
 .nh
-https://en.wikipedia.org/wiki/ANSI_escape_code#SGR
+https://en.wikipedia.org/wiki/ANSI_escape_code#SGR).
 .hy
-).
 If either integer is a "-" or is omitted,
 the corresponding color is set to that of normal text.
 .PP
@@ -824,9 +823,9 @@ CHAR_INFO.Attributes
 value, between 0 and 15 inclusive
 (see 
 .nh
-https://learn.microsoft.com/en-us/windows/console/char-info-str
+https://learn.microsoft.com/en-us/windows/console/char-info-str).
 .hy
-).
+
 To avoid confusion, it is recommended that the equivalent letters rather than numbers
 be used after a lowercase color selector on MS-DOS/Windows.
 .IP \(bu
@@ -1190,9 +1189,8 @@ the name of a command compatible with
 and that command is executed to find the tag.
 (See 
 .nh
-http://www.gnu.org/software/global/global.html
+http://www.gnu.org/software/global/global.html).
 .hy
-).
 The \-t option may also be specified from within
 .B less
 (using the \- command) as a way of examining a new file.
@@ -1541,9 +1539,8 @@ The \-D option can be used to change the colors.
 Colored text works only if the terminal supports 
 ANSI color escape sequences (as defined in 
 .nh
-https://www.ecma-international.org/publications-and-standards/standards/ecma-48
+https://www.ecma-international.org/publications-and-standards/standards/ecma-48).
 .hy
-).
 .IP "\-\-wheel-lines=\fIn\fP"
 Set the number of lines to scroll when the mouse wheel is scrolled
 and the \-\-mouse or \-\-MOUSE option is in effect.
@@ -1969,8 +1966,7 @@ variables.
 .PP
 Finally, if the
 .I setlocale
-interface is also not available, the default character set is latin1.
-On Windows the default character set is utf-8.
+interface is also not available, the default character set is utf-8.
 .PP
 Control and binary characters are displayed in standout (reverse video).
 Each such character is displayed in caret notation if possible
@@ -2546,8 +2542,13 @@ See the GNU General Public License for more details.
 .
 Mark Nudelman
 .br
-Report bugs at https://github.com/gwsw/less/issues.
+Report bugs at 
+.nh
+https://github.com/gwsw/less/issues.
+.hy
 .br
 For more information, see the less homepage at
 .br
-https://greenwoodsoftware.com/less
+.nh
+https://greenwoodsoftware.com/less.
+.hy
