@@ -11,7 +11,7 @@
 
 ======================================================================
 
-	Major changes between "less" versions 643 and 652
+	Major changes between "less" versions 643 and 653
 
 * Add ^O^N, ^O^P, ^O^L and ^O^O commands and mouse clicks (with --mouse)
   to find and open OSC8 hyperlinks (github #251).
@@ -46,7 +46,7 @@
 * Ensure that the target line is not obscured by a header line 
   set by --header (github #444).
 
-* Change default character set on Windows from dos to utf-8.
+* Change default character set to "utf-8", except remains "dos" on MS-DOS.
 
 * Add message when search with ^W wraps (github #459).
 
@@ -92,6 +92,8 @@
 
 * Fix display bug when using -w with an empty line with a CR/LF
   line ending (github #474).
+
+* Fix timing bug on systems with usleep but without nanosleep (github #489).
 
 * When substituting '#' or '%' with a filename, quote the filename
   if it contains a space (github #480).
